--- a/css/styles.css
+++ b/css/styles.css
@@ -311,97 +311,7 @@ img {
     transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* ================ Modal window============== */
 
-
-
-.backdrope {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(46, 47, 66, 0.4);
-    backdrop-filter: blur(2px);
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal {
-    width: 408px;
-    min-height: 584px;
-
-
-    border-radius: 4px;
-    background: var(--modal-window);
-    box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
-
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(1);
-    transition-delay: 600ms;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-}
-
-.backdrope.is-hidden .modal {
-    opacity: 0;
-    transform: translate(-50%, -70%);
-    transition-delay: 0ms;
-}
-
-
-.close-button {
-    position: absolute;
-    top: 24px;
-    right: 24px;
-    width: 24px;
-    height: 24px;
-    padding: 0;
-    
-
-    background-color: var(--cornflower);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    border-radius: 50%;
-    border: 1px solid rgba(0, 0, 0, 0.10);
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-
-
-.close-button:hover,
-.close-button:focus {
-    background-color: var(--active-color);
-    border: none;
-    transition: background-color border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-
-.modal-set-icons{
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-}
-
-.close-button:hover .modal-set-icons,
-.close-button:focus .modal-set-icons {
-    fill: var(--active-font-color);
-}
-    
-
-
-.backdrope.is-hidden {
-    opacity: 0;
-    pointer-events: none;
-    visibility: hidden;
-}
-
-
-
-
-/* ================ /Modal window============== */
 /* ================= /HERO ====================== */
 
 /* ================= MAIN ====================== */
@@ -590,11 +500,10 @@ img {
 
 .footer {
     display: flex;
-    align-items: baseline
-    margin-right: 120px;
+    align-items: baseline;
     padding-top: 100px;
     padding-bottom: 100px;
-    align-items: baseline
+   
 }
 
 
@@ -630,7 +539,7 @@ img {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-right: auto;
+    margin-right: 80px;
 }
 
 .footer-link-topic {
@@ -649,6 +558,7 @@ img {
     display: flex;
     padding: 0;
     gap: 16px;
+    
 }
 
 
@@ -674,8 +584,326 @@ img {
     background-color: var(--team-link-active);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+
+
+.subscribe-text {
+    
+    display: block;
+    margin-bottom: 16px;
+    color: var(--active-font-color);
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.2.em;
+}
+
+.subscribe-form-input {
+    
+    width: 264px;
+    height: 40px;
+    padding-top: 8px;
+    padding-right: auto;
+    padding-bottom: 8px;
+    padding-left: 16px;
+    margin-right: 24px;
+    border-radius: 4px;
+    background-color: transparent;
+    border: 1px solid var(--active-font-color);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    
+}
+
+.subscribe-container {
+    display: flex;
+    justify-content: baseline;
+    align-items: first center;
+} 
+
+
+
+
+.subscribe-button {
+    display: inline-flex;
+    padding: 8px 24px;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+    width: 165px;
+    height: 40px;
+    padding: 8px 24px;
+
+    border-radius: 4px;
+    background: var(--btn-hero-background);
+}
+
+.btn-title{
+    color: var(--active-font-color);
+    text-align: center;
+
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+}
+
 /* ================= /FOOTER =====================FOOTER */
 
+
+/* ================ Modal window============== */
+
+
+
+.backdrope {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(46, 47, 66, 0.4);
+    backdrop-filter: blur(2px);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal {
+    width: 408px;
+    min-height: 584px;
+    padding: 24px;
+    padding-top: 72px;
+    
+    
+
+
+    border-radius: 4px;
+    background: var(--modal-window);
+    box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    transition-delay: 600ms;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.backdrope.is-hidden .modal {
+    opacity: 0;
+    transform: translate(-50%, -70%);
+    transition-delay: 0ms;
+}
+
+
+.close-button {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    width: 24px;
+    height: 24px;
+    padding: 0;
+
+
+    background-color: var(--cornflower);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    border-radius: 50%;
+    border: 1px solid rgba(0, 0, 0, 0.10);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+
+.close-button:hover,
+.close-button:focus {
+    background-color: var(--active-color);
+    border: none;
+    transition: background-color border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+.modal-set-icons {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.close-button:hover .modal-set-icons,
+.close-button:focus .modal-set-icons {
+    fill: var(--active-font-color);
+}
+
+
+
+.backdrope.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
+}
+
+
+
+.modal-input-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    
+}
+
+
+.modal-title {
+    display: block;
+    color: var(--navyblue, #2E2F42);
+    margin-bottom: 16px;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+}
+
+.modal-form-field {
+    position: relative;
+}
+
+.modal-form-lable{
+    display: block;
+    margin-bottom: 4px;
+}
+
+
+.modal-form-input {
+    display: block;
+    width: 100%;
+    height: 58px;
+    padding: 11px;
+    padding-left: 38px;
+    margin-bottom: 8px;
+    border: 1px solid var( rgba(46, 47, 66, 0.40));
+    outline: transparent;
+    background-color: transparent;
+    border-radius: 4px;
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input-icons {
+    position: absolute;
+    top:50%;
+    left: 16px;
+    transform: translateY(-50%);
+    pointer-events: none;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-input:hover,
+.modal-form-input:focus{
+    border-color: var(--btn-hero-background);
+}
+
+.modal-form-input:hover + .modal-input-icons,
+.modal-form-input:focus + .modal-input-icons {
+    fill: var(--btn-hero-background);
+}
+
+textarea {
+    resize: none;
+    width: 100%;
+    height: 120px;
+    margin-bottom: 16px;
+
+    border-radius: 4px;
+border: 1px solid  rgba(46, 47, 66, 0.40);
+}
+
+.lable-text {
+    color:  #8E8F99;
+
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.03em; 
+}
+/* ======================== Checkbox ================= */
+.modal-form-agreement {
+    display: flex;
+    align-items: center;
+    gap:8px;
+    margin-bottom: 24px;
+
+}
+
+.modal-form-agreement-checkbox{
+    appearance: none;
+    width: 16px;
+    height: 16px;
+    border-radius: 2px;
+    border: 1px solid var( rgba(46, 47, 66, 0.40));
+}
+
+.modal-form-agreement-desc{
+    color: #8E8F99;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.16;
+    letter-spacing: 0.03em;
+}
+
+.modal-form-agreement-link {
+    color: var(--btn-hero-background);
+}
+
+.modal-form-icon-noactiv{
+    opacity: 1;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-icon-active{
+    opacity: 0;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-agreement-checkbox:hover + 
+.modal-form-custom-checkbox > .modal-form-icon-noactiv {
+    opacity: 0;
+}
+
+.modal-form-agreement-checkbox:checked + 
+.modal-form-custom-checkbox > .modal-form-icon-active {
+    opacity: 1;
+}
+
+
+/* ======================== /Checkbox ================= */
+
+.modal-form-btn {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+   width: 169px;
+   height: 56px;
+    padding: 16px 32px;
+    border-radius: 4px;
+    background: var(--btn-hero-background);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+}
+
+
+.modal-form-btn-next{
+    color: var(--active-font-color);
+    text-align: center;
+
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+}
+
+/* ================ /Modal window============== */
 
 /* ================= PORTFOLIO =====================*/
 .btn-list {
