--- a/css/styles.css
+++ b/css/styles.css
@@ -587,6 +587,14 @@ img {
 
 
 
+
+.subscribe-form {
+    display: flex;
+    justify-content: baseline;
+    align-items: first center;
+    gap: 24px;
+} 
+
 .subscribe-text {
     
     display: block;
@@ -596,7 +604,7 @@ img {
     font-style: normal;
     font-weight: 500;
     line-height: 1.5;
-    letter-spacing: 0.2em;
+    letter-spacing: 0.02em;
 }
 
 .subscribe-form-input {
@@ -607,19 +615,27 @@ img {
     padding-right: auto;
     padding-bottom: 8px;
     padding-left: 16px;
-    margin-right: 24px;
     border-radius: 4px;
     background-color: transparent;
     border: 1px solid var(--active-font-color);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
     
+    
+
+    color: var(--active-font-color);
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
 }
 
-.subscribe-form {
-    display: flex;
-    justify-content: baseline;
-    align-items: first center;
-} 
+::placeholder{
+    color:var(--active-font-color)
+}
+
+
 
 
 
@@ -630,7 +646,7 @@ img {
     justify-content: center;
     align-items: center;
     gap: 16px;
-    width: 165px;
+    min-width: 165px;
     height: 40px;
     padding: 8px 24px;
 
