--- a/css/styles.css
+++ b/css/styles.css
@@ -653,6 +653,8 @@ img {
 
 .btn-title{
     display: block;
+    justify-content: center;
+    align-items: center;
     color: var(--active-font-color);
     text-align: center;
 
@@ -768,9 +770,16 @@ img {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    
+    margin-bottom: 8px;
+    height: 40px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.modal-input-icons{
+    height: 24px;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 .modal-title {
     display: block;
@@ -790,6 +799,10 @@ img {
 .modal-form-lable{
     display: block;
     margin-bottom: 4px;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: var(--lightslate)
 }
 
 
