--- a/css/styles.css
+++ b/css/styles.css
@@ -783,13 +783,14 @@ img {
 
 .modal-title {
     display: block;
+    text-align: center;
     color: var(--navyblue, #2E2F42);
     margin-bottom: 16px;
     font-size: 16px;
     font-style: normal;
     font-weight: 500;
     line-height: 1.5;
-    letter-spacing: 0.04em;
+    letter-spacing: 0.02em;
 }
 
 .modal-form-field {
