--- a/css/styles.css
+++ b/css/styles.css
@@ -642,6 +642,8 @@ img {
 
 .subscribe-button {
     display: flex;
+    justify-content: center;
+    align-items: center;
     padding: 8px 24px;
     min-width: 165px;
     height: 40px;
@@ -707,7 +709,6 @@ img {
     transform: translate(-50%, -50%) scale(1);
     transition-delay: 600ms;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
 }
 
 .backdrope.is-hidden .modal {
@@ -810,15 +811,15 @@ img {
 .modal-form-input {
     display: block;
     width: 100%;
-    height: 58px;
+    height: 40px;
     padding: 11px;
     padding-left: 38px;
     margin-bottom: 8px;
-    border: 1px solid var( rgba(46, 47, 66, 0.40));
+    border: 1px solid rgba(46, 47, 66, 0.4);
     outline: transparent;
     background-color: transparent;
     border-radius: 4px;
-    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input-icons {
@@ -827,7 +828,7 @@ img {
     left: 16px;
     transform: translateY(-50%);
     pointer-events: none;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-form-input:hover,
