--- a/css/styles.css
+++ b/css/styles.css
@@ -850,13 +850,13 @@ img {
     height: 120px;
     margin-bottom: 16px;
     padding: 8px 16px; 
-
+    color: rgba(46, 47, 66, 0.4);
     border-radius: 4px;
     border: 1px solid  rgba(46, 47, 66, 0.40);
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.04em;
-    rgba(46, 47, 66, 0.4);
+   
     background-color: transparent;
     outline: transparent;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
@@ -882,6 +882,7 @@ img {
     align-items: center;
     gap:8px;
     margin-bottom: 24px;
+    
 
 }
 
@@ -900,38 +901,27 @@ img {
     border: 1px solid var( rgba(46, 47, 66, 0.40));
 }
 
-.modal-form-agreement-desc{
-    color: #8E8F99;
+.icon-agreement-box{
+    display: inline-flex;
+    align-items: center; 
+    justify-content: center;
+    fill: transparent;
+    width: 16px;
+    height: 16px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 2px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    font-size: 12px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.16;
-    letter-spacing: 0.03em;
 }
 
 .modal-form-agreement-link {
     color: var(--btn-hero-background);
 }
 
-.modal-form-icon-noactiv{
-    opacity: 1;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-form-icon-active{
-    opacity: 0;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-form-agreement-checkbox:hover + 
-.modal-form-custom-checkbox > .modal-form-icon-noactiv {
-    opacity: 0;
-}
-
-.modal-form-agreement-checkbox:checked + 
-.modal-form-custom-checkbox > .modal-form-icon-active {
-    opacity: 1;
+.modal-form-agreement-checkbox:checked + .modal-form-agreement > .icon-agreement-box{
+    background-color:var(--active-color);
+    border: none;
+    fill:var(--btn-menu-background)
 }
 
 
