--- a/css/styles.css
+++ b/css/styles.css
@@ -651,9 +651,15 @@ img {
 
     border-radius: 4px;
     background: var(--btn-hero-background);
+
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color:var(--active-font-color);
+    border: none;
 }
 
-.btn-title{
+/* .btn-title{
     display: block;
     justify-content: center;
     align-items: center;
@@ -665,7 +671,7 @@ img {
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.04em;
-}
+} */
 
 
 .footer-social-icon {
