--- a/css/styles.css
+++ b/css/styles.css
@@ -702,14 +702,11 @@ img {
     padding: 24px;
     padding-top: 72px;
     
-    
-
-
     border-radius: 4px;
     background: var(--modal-window);
     box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
 
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) scale(1);
@@ -773,15 +770,7 @@ img {
 
 
 
-.modal-input-container{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-bottom: 8px;
-    height: 40px;
-    border: 1px solid rgba(46, 47, 66, 0.4);
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+
 
 .modal-input-icons{
     height: 24px;
@@ -854,7 +843,6 @@ img {
     resize: none;
     width: 100%;
     height: 120px;
-    margin-bottom: 16px;
     padding: 8px 16px; 
     color: rgba(46, 47, 66, 0.4);
     border-radius: 4px;
